--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
     "@types/google-apps-script": "^1.0.99",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.344.0",
+    "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
